kubernetes/infrastructure/linkerd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkerd
  namespace: linkerd-viz
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - linkerd.snyderhomelab.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web
      port: 8084
